<resources>
    <string name="google_maps_id">AIzaSyC1lIyuW1ocG8hfZHfWe8ZeGrWtzh9oYiM</string>
    <string name="facebook_app_id">662377893941963</string>
    <string name="fb_login_protocol_scheme">fb662377893941963</string>

    <string name="app_name">FlatShare</string>
    <string name="hint_email">Enter Email address...</string>
    <string name="hint_password">Enter password...</string>
    <string name="login_button">Login!</string>
    <string name="register">Register</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="smoker">Smoker:</string>
    <string name="age">Age:</string>
    <string name="hint_firstname">firstname</string>
    <string name="done">Done!</string>
    <string name="tenant_profile_button">Create Tenant Profie</string>
    <string name="apartment_profile_button">Create Apartment Profile</string>
    <string name="firstname_hint">Enter your name</string>
    <string name="age_hint">Enter your age</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="gender">Gender:</string>
    <string name="internet">Internet:</string>
    <string name="washing_machine">Washing machine:</string>
    <string name="create_tenant_profile">Searching for an apartment</string>
    <string name="create_apartment_profile_button">Create Apartment Profile</string>
    <string name="join_apartment_profile_button">Join Apartment</string>
    <string name="create_your_profile">Create Your Profile</string>
    <string name="surname_primary_profile_textview">Name:</string>
    <string name="create_your_tenant_profile">Create Your Tenant Profile</string>
    <string name="take_picture_tenant_profile">Upload profile picture</string>
    <string name="done_1_tenant_profile">Done!</string>
    <string name="pets">Pets:</string>
    <string name="occupation">Occupation:</string>
    <string name="create_your_apartment_profile">Create Your Apartment Profile</string>
    <string name="apartment_price">Price:</string>
    <string name="apartment_area">Area:</string>
    <string name="apartment_street">Street:</string>
    <string name="apartment_house_nr">House Nr:</string>
    <string name="apartment_zip_code">Zip Code:</string>
    <string name="short_bio">Short bio:</string>
    <string name="insert_your_bio">insert your short bio</string>
    <string name="durationOfStay">Duration of Stay:</string>
    <string name="create_your_tenant_setting">Create Your Tenant Settings</string>
    <string name="price_range">Pricing Range:</string>
    <string name="size_range">Size Range:</string>
    <string name="area">Area:</string>
    <string name="purpose_community">Purpose Community:</string>
    <string name="smoking_apartment">Somoking Apartment:</string>
    <string name="balcony">Balcony:</string>
    <string name="cabeltv">Cabel TV:</string>
    <string name="dryer">Dryer:</string>
    <string name="bathtube">Bathtube:</string>
    <string name="necessary">necessary</string>
    <string name="notNecessary">not necessary</string>
    <string name="email_login">emailLogin</string>
    <string name="password_login">passwordLogin</string>
    <string name="login_check_box">Remember Me</string>
    <string name="hint_new_email">New Email address...</string>
    <string name="prompt_password">PROMPT PASSWORD</string>
    <string name="new_pass">New Password...</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password Reset Mail</string>
    <string name="remove_user">Remove User</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="apartment_roommates">Roommates:</string>
    <string name="create_roommate_qr_code_button">Generate Roommate QR Code</string>
    <string name="tenant_profil_string">In this section you should give us some more information about you, so that we can find the perfect apartment for you!</string>
    <string name="tenant_settings_description">Here we would like to know more abour you! We would like that you tell us some of your preferances, so we can search the perfect apartment for you!</string>
    <string name="price_range_info">Please tell us something about your budget:</string>
    <string name="size_apartment">How big should your room be:</string>
    <string name="area_apartment">Where do you want to live?</string>
    <string name="update_profile">Profile Settings</string>
    <string name="profile_settings_description">Here you can update and change your settings and your profile so that we always find the perfect apartment for your needs!</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="info">Info:</string>
    <string name="save_profile_settings">Save</string>
    <string name="done_profile">Done</string>
    <string name="apartment_profil_string">In this section, we would like to know more about your apartment. When you tell us something about your residence, we could find the perfect roommate for your living community.</string>
    <string name="create_your_apartment_setting">Create Your Apartment Settings</string>
    <string name="apartment_settings_description">Here we would like to know more about your preferences and how your new roommate should be, so that we can find the perfect match for your living community!</string>
    <string name="age_range_info">How old should your new roommate be?</string>
    <string name="gender_info">Should your new roommate be a female or a male?</string>
    <string name="smoker_info">Does it matter for you if your new roommate is a smoker?</string>
    <string name="pets_info">Does it matter for you if your new roommate has a pet?</string>
    <string name="occupation_info">What should your new roommate do for a living?</string>
    <string name="duration_info">For how long do you rent this room in your living community?</string>
    <string name="setup">Setup Your Account</string>
    <string name="apartment_info_headline">Apartment Info</string>
    <string name="apartment_info_description">Here we are going to show you some more information about this specific living community you\'re looking at!</string>
    <string name="scan_qr">Scan QR</string>
    <string name="tenant_info_headline">Tenant Info</string>
    <string name="tenant_info_description">Here we are going to show you some information about your possible new tenant.</string>
    <string name="roomSize">Room Size:</string>
    <string name="apartmentSize">Apartment Size:</string>
    <string name="apartment_info_description_2">We will start to show you the more important once at the top.</string>
    <string name="pot_matching_listener_attached">eventListenerKey</string>
    <string name="change_profile_filter_settings">CHANGE FILTER SETTINGS!</string>
    <string name="update_profile_filter">Profile Filter Settings</string>
    <string name="profile_filter_settings_description">Here you can change your filter settings. That means that you can change the parameters to search for the right apartment. We will find the perfect apartment for you!</string>
    <string name="change_to_calendar">CALENDAR!</string>
    <string name="logout_popup">Do you really want to logout?</string>
    <string name="create_roommate_profile_button">Searching for a roommate</string>
    <string name="create_your_roommate_profile">Create Your Roommate Profile</string>
    <string name="nickname">Nickname</string>
    <string name="price">Room Price:</string>
    <string name="size">Size</string>
    <string name="street">Street and Housenumber</string>
    <string name="housenumber">House Number</string>
    <string name="zipcode">ZIP Code</string>
    <string name="field_cannot_be_empty">This field cannot be empty</string>
    <string name="check_rb_error">Please check one option</string>
    <string name="picture_required_error">Please upload a profile picture</string>
    <string name="take_picture_apartment_profile">Upload a picture of your apartment</string>
    <string name="wait_roommate">Please Wait</string>
    <string name="wait_roommate_info">Please wait until the apartment owner is done with the apartment settings!</string>
    <string name="getLocation">Get my location!</string>

    <string-array name="occupation">
        <item>Student</item>
        <item>Employee</item>
        <item>Lowly employed</item>
        <item>Official</item>
        <item>No Job</item>
    </string-array>
    <string-array name="occupation_apartment_settings">
        <item>Student</item>
        <item>Employee</item>
        <item>Lowly employed</item>
        <item>Official</item>
        <item>No Job</item>
        <item>Does not matter</item>
    </string-array>
    <string-array name="durationOfStayArray">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="durationOfStayArrayApartmentSettings">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>Does not matter</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="apartment_city">City:</string>
    <string name="apartment_state">State:</string>
    <string name="apartment_country">Country:</string>
    <string name="apartment_internet">Internet:</string>
    <string name="apartment_smoker">Smoker:</string>
    <string name="apartment_pets">Pets:</string>
    <string name="apartment_washingMashine">Washing Mashine</string>
    <string name="apartment_purpose">Purpose Apartment:</string>
</resources>
